@@ -49,6 +49,9 @@ __thiscall bool Level::IsAltPath();
 "558bec83e4f883ec345356576aff":
 __thiscall void Level::InitializeDevilAngelRoom(bool ForceAngel, bool ForceDevil);
 
+"558bec6aff68????????64a1????????5083ec24535657a1????????33c5508d45??64a3????????8bd9f30f7e05":
+__thiscall int Level::GetRandomRoomIndex(bool IAmErrorRoom, unsigned int Seed);
+
 struct Level {
 	uint32_t _levelStateFlag : 0x1822c;
 	uint32_t _greedwavesclearedwithoutredheartdamage : 0x18204;
