@@ -206,6 +206,8 @@ ModCallbacks.MC_POST_ROOM_TRANSITION_RENDER = 1272
 
 ModCallbacks.MC_PRE_BOSS_SELECT = 1280
 
+ModCallbacks.MC_PRE_GET_RANDOM_ROOM_INDEX = 1290
+
 ModCallbacks.MC_PRE_RENDER_CUSTOM_CHARACTER_MENU = 1333
 ModCallbacks.MC_PRE_PICKUP_GET_LOOT_LIST = 1334
 ModCallbacks.MC_PRE_PICKUP_UPDATE_GHOST_PICKUPS = 1335
